# laraml

./: .gitignore  README.md  dune-project  laraml.opam  tailwind.config.js
lib/: dune
lib/app/: components.ml  dune  layout.ml  router.ml  view.ml
lib/auth/: auth.ml  dune
lib/config/: database.ml  dune
lib/core/: auth.ml  bootstrap.ml  builder.ml  database.ml  dune  layout.ml  router.ml  theme.ml
lib/database/: database.ml  dune
lib/utils/: dune  utils.ml
mosaic/: dune  mosaic.ml
test/: dune
www/static/: global.css
